--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,9 @@
     <li>
       <%= link_to "新規投稿", new_post_path %>
     </li>
+    <li>
+      <%= link_to "投稿一覧", posts_path %>
+    </li>
   <% elsif admin_signed_in? %>
     <li>
       <%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %>
