--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -4,6 +4,10 @@
       <h2 class="mt-4">新規投稿</h2>
       <%= form_with model: @post, url: posts_path, local: true do |f| %>
         <div class="form-group mt-4">
+          <%= f.label :image, "画像" %>
+          <%= f.file_field :image, accept: "image/*" %>
+        </div>
+        <div class="form-group">
           <%= f.label :genre, "ジャンル" %>
           <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "選択してください"}, {class: "new-wrapper__main__input-select"} %>
         </div>
