--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -14,6 +14,7 @@
             <%= image_tag "no_image", size: "100x100" %>
           <% end %>
           <%= post.comments.count %>コメント
+          <%= post.likes.count %> いいね
         <% end %>
       <% end %>
       </div>
