--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,9 @@
     <li>
       <%= link_to "投稿一覧", posts_path %>
     </li>
+    <li>
+      <%= link_to "マイページ", user_path(current_user.id) %>
+    </li>
   <% elsif admin_signed_in? %>
     <li>
       <%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %>
