--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,13 @@
   <% elsif admin_signed_in? %>
     <li>
       <%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %>
-      </li>
+    </li>
+    <li>
+      <%= link_to "ユーザー一覧", admin_users_path %>
+    </li>
+    <li>
+      <%= link_to "投稿一覧", admin_posts_path %>
+    </li>
   <% else %>
     <li>
       <%= link_to "ユーザー新規登録", new_user_registration_path %>
