--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -4,6 +4,7 @@
       <div class="d-flex flex-wrap">
         <%= @post.genre.name %></td>
         <%= @post.title %>
+        <%= @user.name %>
         <% if @post.image.attached? %>
             <%= image_tag @post.image.variant(gravity: :center, resize:"200x200", crop:"640x640+0+0").processed %>
           <% else %>
