--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -1,18 +1,17 @@
 <div class="container">
   <div class="row mt-5">
     <div class="col-md-10 mx-auto">
-      
-      
-      
       <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |f| %>
-      <%= f.collection_select :genre_id, Genre.all, :id, :name %>
   <%= f.text_field :keyword, placeholder: "キーワード", class: "search-input" %>
   <%= f.submit "検索", class: "search-btn" %>
 <% end %>
-      <h4>(全<%= @posts.count %>件)</h4>
-      <div class="d-flex flex-wrap">
-      <% @posts.each do |post| %>
-        <%= link_to post_path(post.id) do %>
+      <% if @searches == [] %>
+<h2 class = "seach-result">検索結果はありません</h2>
+<% else %>
+<div class = "post-contents">
+  <ul class = "post-list">
+    <% @searches.each do |post| %>
+    <%= link_to post_path(post.id) do %>
           <%= post.genre.name %></td>
           <%= post.title %>
           <% if post.image.attached? %>
@@ -24,8 +23,9 @@
           <%= post.likes.count %> いいね
         <% end %>
       <% end %>
-      
-      </div>
-    </div>
+      <% end %>
+</div>
+</div>
   </div>
 </div>
+
