--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,30 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+//投稿一覧共通部分//
+ul{
+  display: flex;
+  flex-wrap: wrap;
+}
+li{
+  position: relative;
+  width: 25%;
+  list-style: none;
+}
+li:before{
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  object-fit: cover;
+}
+
