--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -11,10 +11,10 @@
         <% end %>
       <%= post.genre.name %></td>
       <%= post.title %>
-        <!--<div class="card-img-overlay text-white">-->
-        <!--<i class="fa-light fa-comment"></i><%#= post.comments.count %><!--<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 down-3" style="font-weight:900">27</span>-->-->
-        <!--<i class="fa-solid fa-thumbs-up"></i><%#= post.likes.count %>-->
-        <!--</div>-->
+        <div class="card-img-overlay text-white">
+        <i class="fas fa-comment"></i><%#= post.comments.count %><!--<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 down-3" style="font-weight:900">27</span>-->
+        <i class="fas fa-thumbs-up"></i><%#= post.likes.count %>
+        </div>
       <% end %>
     </li>
     <% end %>
