--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="card mx-auto p-5 shadow-sm" style="width: 20rem;">
-  <div class="text-center">
+  <div class="text-dark text-center">
     <h2>新規登録</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "public/shared/error_messages", resource: resource %>
