--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -29,7 +29,8 @@
   </ul>
 </div>
 <!-- ボタン・リンククリック後に表示される画面の内容 -->
-<%= render "form", post: @post %><!--＋Postボタン-->
+<%= render "form", post_new: @post_new %><!--＋Postボタン-->
+
 
 
     <!-- Optional JavaScript -->
