--- a/app/views/public/posts/_form.html.erb
+++ b/app/views/public/posts/_form.html.erb
@@ -5,7 +5,7 @@
        <h2>新規投稿</h2>
       </div>
       <div class="modal-body">
-        <%= form_with model: post, url: posts_path, local: true do |f| %>
+        <%= form_with model: post_new, url: posts_path, local: true do |f| %>
         <div class="row justify-content-center">
           <div class="form-group mt-4 ">
             <%= f.label :image, "画像" %>
